demo-for-clonned-Lovable-Application/k8s/runner-pods.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: runner-pool
  namespace: lovable-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: runner
      status: idle  #will be change to running.
  template:
    metadata:
      labels:
        app: runner
        status: idle
    spec:
      volumes:
      - name: workspace
        emptyDir: {}
      - name: pnpm-store
        hostPath:
          path: /mnt/pnpm-store
          type: DirectoryOrCreate
      containers:
      - name: runner
        image: node:20-alpine
        workingDir: /app
        command: ["/bin/sh","-c","sleep infinity"]
        volumeMounts:
          - name: workspace
            mountPath: /app
          - name: pnpm-store
            mountPath: /root/.local/share/pnpm
        ports:
         - containerPort: 5173
        resources:
          limits:
            memory: "1Gi"

      - name: syncer
        image: minio/mc
        command: ["/bin/sh","-c","sleep infinity"]
        volumeMounts:
          - name: workspace
            mountPath: /app
