demo-for-clonned-Lovable-Application/k8s/shuttle-proxy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shuttle-proxy
  namespace:  lovable-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shuttle-proxy
  template:
    metadata:
      labels:
        app: shuttle-proxy
    spec:
      containers:
        - name: proxy
          image: shuttle-proxy:latest
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
          ports:
            - containerPort: 80
