demo-for-clonned-Lovable-Application/k8s/redis-service.yml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: lovable-app
spec:
  selector:
    app: redis
  ports:
  - port: 6379
    targetPort: 6379
    protocol: TCP
  type: ClusterIP
