demo-for-clonned-Lovable-Application/k8s/shuttle-service.yml
apiVersion: v1
kind: Service
metadata:
  name: shuttle-proxy-svc
  namespace:  lovable-app
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: shuttle-proxy
